# nomaR

./: AUTHORS  ChangeLog  INSTALL  NEWS  README.md  meson.build
src/: aa.c  aa.h  aa_file.c  aa_file.h  aa_k_mer.c  aa_k_mer.h  cmp_k_mer.c  cmp_k_mer.h  count_fann.c  count_fann.h  count_k_mer.c  count_k_mer.h  count_table.c  count_table.h  fann.c  fann.h  gz.c  h5.c  h5.h  k_mer.c  k_mer.h  log.c  log.h  main.c  meson.build  strv.c  strv.h  test.c  test.h  train.c  train.h  utils.c  utils.h  weight.c  weight.h  wrapper.c  wrapper.h
tests/: check_nomar.h  check_nomar_aa.c  check_nomar_aa_file.c  check_nomar_aa_k_mer.c  check_nomar_count_k_mer.c  check_nomar_count_table.c  check_nomar_example.c  check_nomar_gz.c  check_nomar_h5.c  check_nomar_k_mer.c  check_nomar_main.c  check_nomar_strv.c  check_nomar_utils.c  check_nomar_wrapper.c  meson.build
